Add Redis-backed rate limiter with comprehensive documentation
Implement client-side rate limiting for LLM APIs with FIFO queue ordering
to prevent thundering herd problems. The library supports combined TPM
(OpenAI/Anthropic), split input/output TPM (GCP Vertex AI), or both.

Features:
- RateLimiter with atomic Lua scripts for distributed coordination
- RedisConnectionManager with connection pooling
- Exponential backoff retry with jitter for transient failures
- Graceful degradation when Redis is unavailable
- adjust() for correcting output token estimates

Documentation:
- README with installation and quick start examples
- MkDocs site with usage guide and API reference
- Complete docstrings for all public APIs

77 tests covering combined mode, split mode, connection management,
and integration scenarios.

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,10 @@ __marimo__/
 # Skip reference related code
 reference_code/
 
+# Skip specs
+openspec/
+.agent/
+.claude/
+.serena/
+AGENTS.md
+CLAUDE.md
