--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,10 +103,14 @@ ignore = [
     "E501",
     # DoNotAssignLambda
     "E731",
+    # Avoid specifying long messages outside exception class (overly strict)
+    "TRY003",
+    # Standard pseudo-random generators not suitable for crypto (fine for jitter)
+    "S311",
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["S101"]
+"tests/*" = ["S101", "S105", "S106"]
 
 [tool.ruff.format]
 preview = true
@@ -117,4 +121,3 @@ skip_empty = true
 [tool.coverage.run]
 branch = true
 source = ["src"]
-
