Add mermaid diagrams explaining rate limiter architecture
- Add architecture overview diagram to README
- Add detailed diagrams to usage guide:
  - Architecture overview
  - Acquire flow
  - Sliding window with FIFO queue
  - Rate limit modes comparison
  - Retry with exponential backoff
  - Capacity calculation
- Enable mermaid support in mkdocs with Material theme
- Update pre-commit to allow unsafe YAML for mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,8 +59,14 @@ markdown_extensions:
       generic: true
   - pymdownx.highlight:
       anchor_linenums: true
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
   - admonition
   - pymdownx.details
+  - attr_list
+  - md_in_html
