Add comprehensive test documentation
- Create docs/tests.md documenting all 77 tests
- Add Test Documentation to mkdocs navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - Home: index.md
   - Usage Guide: usage.md
   - API Reference: api.md
+  - Test Documentation: tests.md
 
 plugins:
   - search
